Updated most of the colours to match the new theme. Have added custom icons and gave the nav a makeover. Still need to make the nav/menu fixed on smaller devices as per Chris request. Will also show the login page a bit of love.

--- a/public/css/portal-57250b.webflow.css
+++ b/public/css/portal-57250b.webflow.css
@@ -61,7 +61,7 @@ body {
   display: -ms-flexbox;
   display: flex;
 /*  height: 500px;*/
-  margin-top: 15px;
+  margin-top: 60px;
   margin-bottom: 15px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
