--- a/src/App.css
+++ b/src/App.css
@@ -15,28 +15,28 @@
 }
 #loading span, #loading i {
 	position: absolute;
-  	top: 30%;
+  	top: 50%;
   	left: 50%;
  	margin-top: -25px;
   	margin-left: -25px;
-	color: #385e9d;
+	color: #fff;
 }
 
 #loading {
     position: fixed;
     width: 100%;
-    top: 105px;
+	height: 100%;
+	top: 0;
     left: 0px;
- 	height: calc(100% - 100px);
     background-color: rgba(36, 78, 147, 0.66);
-    color: #385e9d;
+    color: #3e6ab4;
     z-index: 5999;
 }
 
 @media ( max-width : 712px) {
 	#loading {
-	    top: 50px;
-	 	height: calc(100% - 50px);
+	    top: 0;
+	 	height: 100%;
 	}
 }
 
