--- a/src/components/dashboard/Notifications.css
+++ b/src/components/dashboard/Notifications.css
@@ -29,7 +29,7 @@
 	fill: #385e9d;
 }
 .NotificationDate {
-	color: #bae1df;
+	color: #558ae0;
 	font-size: 16px;
 	float: left;
 	text-transform: uppercase;
